--- a/shared/collaboration/organization/roles/テックリード.md
+++ b/shared/collaboration/organization/roles/テックリード.md
@@ -1,3 +1,5 @@
 テックリードって役割がぼんやりしすぎてて何を求められてるかは聞いてみないとわからない。
 
 技術的に優れたチームリーダーを指している場合もあれば、エンジニアリングマネージャーを指している場合もある。
+
+テックリードの場合、業界全体の中での立ち位置というより、社内での立ち位置によってリードするレベルが違う。社内のレベルが低かったらそれなりの技術力でもいいけど、レベルが高かったらその中でも卓越していないといけない。
