--- a/shared/commerce/marketing/受託開発.md
+++ b/shared/commerce/marketing/受託開発.md
@@ -31,3 +31,7 @@
 受託でも個人の能力や進退の影響を抑えたかったら 5〜6 人のチームを作れる月額 500〜720 万円規模が最低ラインになる。
 
 受託でも優れた技術者を引き止めないと顧客自身が困る。しかも自製よりコストがかかる。
+
+受託開発では発注者側に当事者意識がないとうまくいかない。受託開発で責任を負うのは発注者以外にない。プロジェクトがうまくいかなかったら全部発注者が悪い。
+要件をまとめて発注したなら「仕様通りに作る」のが受注側の仕事だ。それでうまくいかなくても発注者が悪い。
+発注側が自分たちで要件定義ができないなら、ちゃんと金を払って要件定義の支援を依頼して、良いものが作れるように受注側に助けてもらうべき。金を払ってないなら受注側にそこまでやる責任はない。
