--- a/shared/communication/frameworks/negotiation/交渉.md
+++ b/shared/communication/frameworks/negotiation/交渉.md
@@ -26,3 +26,6 @@ https://qiita.com/Saku731/items/c43137a6f4bf7166490a
 交渉すると信頼関係を損ないやすい。
 
 交渉するつもりがないなら、話を聞く必要もない。
+
+交渉よりも戦争が先。
+まず武力を示さないと、交渉の席に着けない。
