--- a/shared/computer/software/development/ソフトウェア開発.md
+++ b/shared/computer/software/development/ソフトウェア開発.md
@@ -210,3 +210,5 @@ https://tech.willgate.co.jp/entry/2024/04/01/184252
 一人でも大きな仕事ができるけど、それでもやはり組織の方が強い。
 
 製品開発を知らないとソフトウェア開発もわからない。
+
+一般的なソフトウェア開発者はレベルが低いというか、そもそも求められる知識が広すぎる。それこそ趣味で知識を集めるような人間じゃないとついていけないくらい。
