--- a/shared/job/hunting/tips/求人を選ぶ.md
+++ b/shared/job/hunting/tips/求人を選ぶ.md
@@ -20,3 +20,8 @@
 - 「未経験歓迎」「業務経験不問」（単純作業）
 - 「自由な社風」（マネジメントが行き届いていない）
 - 「少数精鋭」（人手不足）
+- 使用している技術が古い（社内の案件が整理できてない）
+
+## メモ
+
+求人票で「使用する技術」に古い技術が含まれるのは社内の案件が整理できてない会社。PHPのCode Igniterとか、JavaのStrutsとか、JavaScriptのAngularとか。無駄にサポートが長くて収益率が悪くなっている可能性がある。
