--- a/shared/politics/conflict/競合.md
+++ b/shared/politics/conflict/競合.md
@@ -31,3 +31,5 @@
 
 殺人や戦争は人間関係のトラブルの解決方法の一つ。
 それが一番だったらやるしかないけど、そこまで追い込まれることもあまりない。
+
+競合を解決するための手段が、政治（交渉）と戦争。政治の方が平和的だと思われてるけど、必ずしもそうではない。そもそも政治的にうまく丸め込んだら一方が損することもある。一方が損するなら平和的とは言えない。
