--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -168,3 +168,5 @@ Lose-WinをLose-Loseに持ち込む。
 戦いが終わったらノーサイド。敵も味方もない。いや、そうならないと戦いが終わったとは言えない、と言うべきか。
 
 敵が多い世界で育った人は戦いを覚える。敵に恐怖を与えること、舐められないこと、を覚える。
+
+競合した相手を「敵」と見做した時点で、暴力的であろうと平和的であろうと戦争は起きる。平和的な戦争。
