--- a/shared/entertainment/examples/イベントに参加する.md
+++ b/shared/entertainment/examples/イベントに参加する.md
@@ -15,3 +15,5 @@
 イベントで知り合った人を自分たちのイベントに誘ってもいいと思うけど、知り合ったイベントの内容から離れていると興味がない可能性も高くなる。
 
 実績が少ないイベントサークルは友人と一緒に参加すれば最悪開催されなくても友人と飯でも行けばいい。
+
+イベントとかで部屋に入ったとき、まずは自分のことよりも挨拶を優先する。荷物を置いたり上着を脱いだりするのは後回し。
