--- a/shared/leisure/examples/travel/草花の見頃.md
+++ b/shared/leisure/examples/travel/草花の見頃.md
@@ -44,7 +44,7 @@
 - 彼岸花: 9月下旬から1週間程度
 - ダリア: 10月下旬
   - 上野東照宮
-- バラ（秋）: 10月下旬から半月程度
+- バラ（秋）: 10月中旬から2週間程度
   - 神代植物公園
 - 菊: 11月上旬
 - もみじ: 11月下旬
@@ -58,3 +58,6 @@
 ## メモ
 
 https://ganref.jp/subject/flower/
+
+多年生の草木は年に数回咲くものでも植え替えるわけではないので、どちらか片方で見に行くだけでもいい。
+バラは背が低いけど木なので植え替えはない。ただ、春だけ咲く品種もある。
