--- a/shared/picture/絵を描く.md
+++ b/shared/picture/絵を描く.md
@@ -2,3 +2,5 @@
 全体の位置関係としては、縦横方向の距離と奥行き（重なり）が大事。
 
 色をつける場合はまず濃度（明度）が重要で、モノクロでも同じ印象になるのが大事。彩度や色彩はその後。薄いところと濃いところは同じくらいなら絵全体で同じくらいにしないといけない。
+
+線を書くdrawingと面を書くpaintingがある。
