--- a/shared/voice/training/tips/ビブラートをかける.md
+++ b/shared/voice/training/tips/ビブラートをかける.md
@@ -118,3 +118,5 @@ https://youtube.com/watch?v=OiaaZBhYXr8&si=mZ_JMf_Nu_DebYaN
 ビブラートが小さくなりすぎるのはまだ呼吸のコントロールが不安定。ただ、自然にビブラートがかかるのは方向性としては悪くないはず。
 
 息を支えると自然とビブラートがかかる。
+
+楽して声を出すと自然なビブラートにならない。自然に息を吐くのを横隔膜で押さえ込んでこそビブラートがかかる。楽して息を吐かない。
