--- a/shared/computer/software/development/設計.md
+++ b/shared/computer/software/development/設計.md
@@ -16,3 +16,6 @@ https://zenn.dev/nameless_sn/articles/16_awesome_repos_for_system-design
 アーキテクチャやレイヤーを考える前に、まずドメインを分ける。
 一度に考えないといけない範囲を絞って、認知負荷を下げる。
 レイヤーを分けるのその後。分けなくていい場合もある。
+
+データというか、インタフェースから考えるとわかりやすい。
+細かい設計では、入出力、データの状態の遷移、最終的な状態、を明確にする。
