--- a/shared/education/教育.md
+++ b/shared/education/教育.md
@@ -65,3 +65,5 @@ Study と比べると、体系的に学ぶのが基本。
 教育は、能力を向上させるよりも、文化を伝えるのが大事。ついでに勉強させたり鍛錬させたりすることが多い。
 
 診療所や学校などの慈善事業を布教活動として行うことがある。
+
+教育の最初期はまず楽しませること、あるいは自発的に楽しめるようにすることを考える。続けられることが最優先。続けていれば効率が悪くてもそれなりにはなる。まぁ、対戦ゲームなんかではあまりにも進みが遅いと勝てなくて辞めてしまうこともあるので、慣れてきたらある程度効率も求めたい。
