--- a/shared/information/情報を絞る.md
+++ b/shared/information/情報を絞る.md
@@ -4,3 +4,10 @@
 例えば本を読むだけでも、文字がたくさんあるときついなら紙とかで直近の数行以外は隠すとか。
 
 真偽が怪しくても、もし本当だった時に重大なリスクがある情報を捨てるのは頭が悪い。怪しかったら自分で検証すればいいだけ。この場合、調査では足りないので、自分の手で検証しないといけない。
+
+コミュニケーションではまず趣旨を定めて、それ以外の余計な情報は削る。
+たとえば野球を教えるならまずは楽しさを教えて、ボールが当たって怪我をしたりする危険性については後回しにする。講義を分ける。
+
+1. 趣旨を定める
+2. 趣旨に沿わない情報を削る
+3. 削った情報は次の機会に回す
