--- a/shared/production/product/development/製品開発.md
+++ b/shared/production/product/development/製品開発.md
@@ -147,3 +147,14 @@ https://youtube.com/watch?v=HWB1j6enly8&si=vFYpXZ751PbPe60t
     - オフショア
     - 機械化
     - 効率化
+
+開発者の基準:
+
+1. ジュニア: 始めたてで何もかも足りない
+2. ミドル: 一つの機能を作れる
+3. シニア: 一つの製品を作れる（時にチームを率いる）
+4. トップ: チームや組織を超えて、業界への大きな影響力がある
+
+https://x.com/shtrchkw/status/1976818875800191271
+
+大きな製品を作るためには、チームを率いる能力も必要になる。
