--- a/shared/family/children/妊娠.md
+++ b/shared/family/children/妊娠.md
@@ -5,3 +5,5 @@
 - https://belta.co.jp/pregnancy/30s_40s/
 
 妊娠36週から出産までを臨月という。そろそろ産まれるのでいつでも病院に行けるようにして、安静にする。全く動かないのもよくないが、運動や外出は避ける。
+
+お茶は妊婦によくないものもある。ルイボスティーやジャスミンティーのような花のお茶はあまり良くないものが多い。
