--- a/shared/family/children/妊娠.md
+++ b/shared/family/children/妊娠.md
@@ -7,3 +7,5 @@
 妊娠36週から出産までを臨月という。そろそろ産まれるのでいつでも病院に行けるようにして、安静にする。全く動かないのもよくないが、運動や外出は避ける。
 
 お茶は妊婦によくないものもある。ルイボスティーやジャスミンティーのような花のお茶はあまり良くないものが多い。
+
+十月十日は10ヶ月目の10日のことなので、280日を指す。310日ではない。
