--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -490,3 +490,5 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 - どこまで信頼できるか
 
 信頼性を確かめる。
+
+慣れてない人とうまく交流できないのは人見知りだけど、慣れている人でもうまく交流できないのは人間不信。
