--- a/shared/computer/programming/tips/コーディングを学ぶ.md
+++ b/shared/computer/programming/tips/コーディングを学ぶ.md
@@ -1,4 +1,4 @@
-# プログラミングの学習方法
+# コーディングの学習
 
 ## 学習サイトを利用する
 
@@ -17,6 +17,12 @@
 本を音読するのと同じように、同じものをアウトプットすることでインプットを助ける。
 タイピングの練習にもなる。プログラミング言語をタイピングするのは母語とはまた違う。
 
+## 写経する
+
+コードの写経は書くことよりも元のコードを読むのが大事。
+音読やメモなど、コードを詳しく読むのに役立つ方法なら写経でなくてもいい。
+まぁ、写経はタイピングの練習にもなるので写経が一番いいと思う。慣れてきたら単に黙読でも十分読める。
+
 ## 設計ツールを使ってみる
 
 設計ツールには、その設計で使われるモデルが反映されている。
@@ -33,3 +39,5 @@
 [プログラミング初心者が Flutter と chatGPT を使って 3 週間でアプリを作った話](https://zenn.dev/farmerswalker/articles/5492af326be2b8)
 
 [なぜ僕は公式ドキュメントを読むのが苦手なのか #初心者 - Qiita](https://qiita.com/nakampany/items/91d77f1b87278ed40e81)
+
+https://learn.grasshopper.app/
