--- a/shared/computer/programming/tips/プログラミング言語を選ぶ.md
+++ b/shared/computer/programming/tips/プログラミング言語を選ぶ.md
@@ -2,7 +2,8 @@
 
 ## Web フロントエンド
 
-基本的には JavaScript 一択。TypeScript で型をつけることはある。
+基本的にはJavaScript/TypeScript一択。
+WebAssembly系も結局JSになるのでJSを知っておいて損はない。
 
 WebAssembly はまだ実用に足るとは思えない。
 WebAssembly や Livewire みたいな技術があっても、結局は JavaScript を身につけてないと不安。
@@ -23,6 +24,8 @@ WebAssembly や Livewire みたいな技術があっても、結局は JavaScrip
 その他、PHP (Laravel) や Ruby (Ruby on Rails) など、幅広い選択肢がある。
 
 モバイルしか対応しない場合は、Xamarin に合わせて C#とか、Flutter に合わせて Java や Kotlin を採用する場合がある。
+
+Webアプリケーションサーバーは結局生成されたHTMLを返すだけなので、HTTPリクエストを処理してHTMLが入ったHTTPレスポンスを返せるならなんでもいいっちゃいい。
 
 ## デスクトップ
 
