--- a/shared/computer/programming/tips/命名.md
+++ b/shared/computer/programming/tips/命名.md
@@ -1,3 +1,9 @@
+[定番のコード規約とライブラリから学ぶ JavaScript の命名テクニック（上級編） - ICS MEDIA](https://ics.media/entry/220929/)
+
+[【日本人エンジニア必携】英語命名規則の決定版 #Python - Qiita](https://qiita.com/hironori_narita/items/4b06db0953053d41c4a0)
+
+頻繁に使ってほしくない変数や関数は長い名前をつけるのも一つの設計。
+
 適切な名前をつける。
 
 汎用的・一般的な名前は役割・責務を持ち過ぎている可能性が高い。
@@ -9,3 +15,11 @@
 [うまくクラス名を付けるための参考情報 - Qiita](https://qiita.com/KeithYokoma/items/ee21fec6a3ebb5d1e9a8)
 
 [プログラミングでよく使う英単語のまとめ【随時更新】 - Qiita](https://qiita.com/Ted-HM/items/7dde25dcffae4cdc7923)
+
+## 曖昧な名前の例（アンチパターン）
+
+- filtered
+- manager
+
+クラスや関数の名前はこだわろう。
+まぁ、テストがあるなら、一旦命名しておいて、ドメイン知識が増えたらより概念に近い名前に変えていってもいい。
