--- a/shared/computer/programming/コーディング.md
+++ b/shared/computer/programming/コーディング.md
@@ -89,3 +89,8 @@ https://speakerdeck.com/munetoshi/code-readability?slide=165
 
 コーディングはその言語らしく書いた方が最適化できる。
 関数型言語でないのに関数型っぽく書いても限界がある。処理が遅くなることもある。
+
+「実装＝プログラミング」ではない。
+実装には紙芝居などのモックアップも含まれるし、設定ファイルを用意したり、テストしたりするのも実装に含まれる。
+
+テストによって仕様を満たしたかどうか確認しないと「実装した」とは言えない。
