--- a/shared/decision/意思.md
+++ b/shared/decision/意思.md
@@ -77,3 +77,5 @@
 意志が固いと柔軟性がないので、意志が柔らかいのもそれはそれで適所がある。
 
 何らかの判断がまずあって、その主体を仮に「意思」と呼んでいるだけ。そこに「意思」がある、と言っているのは人間だけ。だから意思などあってもなくてもどっちでもいい。
+
+強い意志を示すためには、己を賭す。
