--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -161,3 +161,5 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 
 昭和の歌は本当に天才のものだったけど、平成や令和の歌は凡才でも歌える。良くも悪くも。
 少年時代なんかは伴奏がシンプルすぎて歌唱力がもろに出てしまう。
+
+歌には反射神経が必要。伴奏の音を聞いて、その場で合わせるのが一番いい。
