--- a/shared/society/leadership/リーダー.md
+++ b/shared/society/leadership/リーダー.md
@@ -91,3 +91,5 @@ https://x.com/coffee_nomimasu/status/1832985764860399885
 大きな集団の末端にいるよりも、小さな集団のリーダーとして活躍する方がいい、という教え。
 
 普段から批判が多い人は意思決定に関わらせてはいけない。そもそも自我を持ってないモブなので、いざ自分が意思決定する側に回るとろくに意思決定できない。
+
+卓越した「強さ」によるリーダーシップが基本。優れているからこそ人がついてくる。
