--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -492,3 +492,10 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 信頼性を確かめる。
 
 慣れてない人とうまく交流できないのは人見知りだけど、慣れている人でもうまく交流できないのは人間不信。
+
+> 「お願いがあるんだ」
+> 「いいよ」
+> 「まだ何も言ってないよ」
+> 「お前のお願いならいいよ」
+>
+> 『四月は君の嘘』
