--- a/shared/achievement/結果.md
+++ b/shared/achievement/結果.md
@@ -11,3 +11,5 @@
 結果はなんらかの仕事になるはずだ。なんらかの変化を自分や周囲に生じる。
 
 過程の良さは次に繋がる再現性を目指した良さだけど、本番が一回きりしかないと結果の良さしか関係ない。練習では再現性を高めていって、どうしても勝ちたいところでは運任せでも勝たないといけない。ただ、何も考えてない運任せでは勝てない。再現性をできるだけ高めた上で必要なリスクを取る。
+
+結果を出す。誰かに阿らなくても、それだけで価値が認められる。
