--- a/shared/entertainment/接待.md
+++ b/shared/entertainment/接待.md
@@ -141,3 +141,5 @@ entertainment は不特定多数を楽しませるもので、その場で一人
 ホストは楽しくなくていい。ゲストを楽しませるのが仕事。ゲストを楽しませた上でホストも楽しめるならそれが一番。
 
 接待でも下手に出る必要はない。重要なのは相手を楽しませること。まぁ、人によっては持ち上げられるのが好きって人もいるけど。
+
+でかくて怖い人は接客業で一定の需要がある。用心棒がいてこそ、接客に集中できる。
