--- a/shared/game/theory/守り.md
+++ b/shared/game/theory/守り.md
@@ -1,6 +1,10 @@
+守りはまず相手の攻めを凌いでダメージを最小限に抑える「受け」と、そこから攻めを切りに行く「切り返し」に分かれる。
+
+## その他
+
 守りでは「相手の攻めを切らす」という考え方が重要。
 
-守りというのは、相手に行動を制限されている状態。
+守りというのは、相手に行動を制限されている状態の対応。
 格闘ゲームでいうとガードや投げ抜け、ジャンプなどを強要されている。
 
 相手がうまかったら、こちらから攻めを切らさないと守りのターンは終わらない。
