--- a/shared/health/exercise/tips/体力をつける.md
+++ b/shared/health/exercise/tips/体力をつける.md
@@ -31,3 +31,6 @@ https://smartlog.jp/151080
 
 「体力をつけるためには体力が必要なのでは？」
 https://x.com/gomihitomi/status/1967427964758593829
+
+インディアンランニング:
+集団で縦に並んでランニングしながら、最後尾になったら先頭までダッシュする。
