--- a/shared/politics/violence/暴力.md
+++ b/shared/politics/violence/暴力.md
@@ -33,3 +33,5 @@
 声をかけたり見たりすることさえも承認されなければ暴力だ。
 
 暴力を振るう大前提として必要なのは、暴力を振るわれる覚悟を持つこと。殴られても驚かないで即座に殴り返すこと。これができないと手が遅れて弱い。
+
+暴力に暴力で返すのはもっとも誇るべき行為だ。普通、暴力というものは強者から弱者に対して振るわれるのだから。弱者が暴力を手放したら何も残らない。
