--- a/shared/communication/channels/sex/女性.md
+++ b/shared/communication/channels/sex/女性.md
@@ -13,3 +13,5 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 一般的には、力もないし、体力もない。
 
 労働者として男女の価値を同じくするなら、男性の出産・育児休暇を法律で強制するくらいしかない。
+
+男は出産も授乳もできない。女より劣っている。だから、他の面で価値を示すしかない。
