--- a/shared/management/戦略.md
+++ b/shared/management/戦略.md
@@ -19,3 +19,7 @@ https://twitter.com/ysk_motoyama/status/1693771064961343971?s=20
 
 戦略とは兵站のことだ。
 どこにどの資源をどのくらい割くか。
+
+リソースを余らせて「楽する」のを戦略とは言えない。
+戦略とは最も効率的で効果的なリソース配分のことだ。
+最高効率のために休息や妥協は必要だが、それだけでは足りない。
