--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -356,3 +356,5 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 習うより慣れろ。しかし、自らの学びは止めない。外から得られる知識よりも内なる思考を回す。
 
 練習の目的は、成功すること。
+
+練習すればするほど下手に感じるなら、勉強しすぎ。座学は練習に合わせて進めないといけない。「ちょっと下手かも」と「天才かも」を繰り返すくらいがちょうどいい。
