--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -140,6 +140,8 @@
 3年縛りは2年目秋の大会を取って春大会で試合数を稼ぐのが大事。
 そのためには1年目でできるだけ勝って、1年生をパリコレしたりして育てるのと、1年目のスカウトが大事。
 
+3年縛りの終わり近くは器材より強化アイテム、特に弾道バットを買うのもいい。
+
 ## その他
 
 1年目の1年生投手は1人にして、残りは野手にコンバートするべきかも。2年目に野手4人だと1年生を4人登用しないといけないのが厳しい。どっちみちスカウトは投手優先なので、1年生投手をリリーフにした方がまだいい。
