--- a/games/Street-Fighter/Six/system/ドライブパリィ.md
+++ b/games/Street-Fighter/Six/system/ドライブパリィ.md
@@ -92,3 +92,6 @@
 起き上がりジャストパリィの簡単な練習は、簡単練習設定で投げ抜けの練習を選んで、レコード2を止める。コアコパだけしてくるようになる。
 
 起き上がりパリィを避けるには3-4F遅らせ打撃にする。
+
+ジャストパリィできるなら全部ジャストパリィした方がいい。
+ジャストパリィできてないところは全て伸びしろ。
