--- a/shared/music/tips/リズムを取る.md
+++ b/shared/music/tips/リズムを取る.md
@@ -1,3 +1,7 @@
 曲が遅すぎても難しい。ベースは120bpmと80bpmあたり。
 
 まずは60bpmでゆったり一定のテンポをキープできるようにするのが大事。遅くできないことは速くできない。朗読とかするといいかも。
+
+リズムに慣れる時は口ずさむのと、体幹を揺らして腰でリズムを取る。
+
+リズムはまず120BPMが基礎。これくらいの曲が多い。慣れてきたら60BPMと180BPMにも慣らす。60BPMはかなり遅くて、実際にこのテンポの曲はまずない。
