--- a/shared/singing/tips/音程を合わせる.md
+++ b/shared/singing/tips/音程を合わせる.md
@@ -51,3 +51,5 @@ https://youtu.be/lzP0toBya5c?si=XdfEx5wVmIzcppsR
 
 一音ずつ地声で音を取る練習をする。
 一つずつ鳴らして、地声で同じ音を出す練習。
+
+音程が細かく上下するフレーズは声帯よりも呼吸の強弱で結果的に音程がつく感覚。アイドルの「無敵の笑顔でかわすメディア」のとことか。
