--- a/shared/society/leadership/フォロワー.md
+++ b/shared/society/leadership/フォロワー.md
@@ -14,3 +14,5 @@
 リーダーは先頭に立たないといけない。自分が一番誠実に仕事に取り組む。
 
 フォロワーシップとしてはリーダーについていくだけではなく自分の意見も持たなければならない。その上で、あくまでもリーダーはリーダーとして目標は同じ方を向く。目標に異議を唱えるなら違うリーダーについた方がいい。
+
+優秀なメンバーはリーダーの意思決定を楽にしてくれる。多少間違ってもメンバーが力づくでなんとかしてくれる場面がある。ただ、メンバーに頼ってばかりのリーダーは切り捨てられることがある。持ちつ持たれつ。
