--- a/shared/society/社交におけるコミュニケーション.md
+++ b/shared/society/社交におけるコミュニケーション.md
@@ -1,3 +1,10 @@
+## 社交におけるコミュニケーションの目標
+
+- 相手を知る
+- 自分を知ってもらう
+
+## その他
+
 社交におけるコミュニケーションで知るべき情報は、会話の内容そのものではなく、相手のこと。
 「相手を知る」ためのコミュニケーションが、社交におけるコミュニケーションの役割。
 
@@ -9,3 +16,8 @@
 相手から何を得られて、相手に何を与えて信頼関係を築けるか、を判断するため。それが社交の材料になる。
 
 どうやって信頼関係を築くか、何を得られるか、何を与えられるか、どこまで信頼できるか、を判断する。
+
+相手を知る、
+自分を知ってもらう、
+というのが社交におけるコミュニケーション。
+これは信頼関係を築くため。
