--- a/shared/trust/intimacy/友人.md
+++ b/shared/trust/intimacy/友人.md
@@ -153,3 +153,5 @@
 まぁ、少額を店でまとめ払いして、「次はそっちが奢ってね」っていうくらいならいい。
 
 みんな、今の居場所から逃避するために誰かと交わるのかもしれない。逃げる必要がないなら友人なんて要らないのか？
+
+異性との友人付き合いを考えるなら、異性を意識するような会話は避ける。容姿を褒めるとか。
