--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手獲得.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手獲得.md
@@ -54,6 +54,8 @@
 
 スカウトは投手が強い県をまず見ていきつつ、投手自体はいくつか回ってから改めて同じ県に行くのがいいかも。投手が多すぎても使いきれない。
 
+転生や天才の投手がいるなら、その世代の投手は2人で十分。1人でもいいくらい。
+
 ### 転生選手が強い県
 
 https://game8.jp/eikan-nine/553746
