--- a/shared/business/corporation/技術者の採用基準.md
+++ b/shared/business/corporation/技術者の採用基準.md
@@ -9,3 +9,6 @@
 
 クライアントとサーバーで言語を揃えるのは、一人で全部やるためではない。
 組織で共通の問題を共有するため。違うところは違っていい。
+
+履歴書を特定のエンドポイントにファイルとして送信させることで応募者を篩い落とす方法。
+https://x.com/jalva_dev/status/1857000595682373649
