--- a/shared/collaboration/team/frameworks/Scrum/events/デイリースクラム.md
+++ b/shared/collaboration/team/frameworks/Scrum/events/デイリースクラム.md
@@ -100,3 +100,5 @@ SB で進捗も見えるようになってるし。
 
 デイリースクラムは進捗会議ではない。
 あくまでもチームのためのイベントなので、POの都合で何かしようと思ったら間違いということが多い。
+
+デイリースクラムが15分で終わらない場合、それ以外の時間でチームの接触が少なすぎる。
