--- a/shared/computer/programming/コード品質.md
+++ b/shared/computer/programming/コード品質.md
@@ -79,3 +79,6 @@ https://qiita.com/kosuke-17/items/e5750ba01fc742a3b142
 メモやスケッチを活用する。
 
 クソコードはまず動かすのが大変。
+
+「良いコード」は「全部読まなくても意味が理解できるコード」だ。
+逆に、コードが汚いと全部読んでようやく意味がわかるかどうか。場合によってはそれでも理解が困難。
