--- a/shared/computer/programming/プロダクトコードとテストコード.md
+++ b/shared/computer/programming/プロダクトコードとテストコード.md
@@ -18,3 +18,5 @@ TDD の "Red-Green-Refactoring" は以下の三つを表している。
 プロダクトコードはテストコードを、テストコードはプロダクトコードをテストする補完関係にある。
 
 https://note.com/atamaplus_dev/n/n7381b07462f6
+
+テストコードが簡単に書けるプロダクトコードは、強制的に設計が良くなる。だから、テストコードと一緒に書く。
