--- a/shared/documentation/文書.md
+++ b/shared/documentation/文書.md
@@ -47,3 +47,5 @@
 ドキュメントはあるんだけどうまく集約できてないと、役に立たない。知られてないドキュメントには意味がない。
 
 「ドキュメントは最新じゃない。『昔いた誰かの希望』だ。最新は常にSlackにある」
+
+資料はまず目次だけで意味が伝わるようになってないならやり直し。
