--- a/shared/sleep/睡眠.md
+++ b/shared/sleep/睡眠.md
@@ -103,3 +103,6 @@
 寝るにも体力が必要。
 
 寝ている間のホルモンで代謝が促される。代謝とはつまり細胞が置き換わること。寝ない子供は大きくなれないし、大人も太ったり老いたりする。
+
+同じ時間に寝起きするのが健康にとっては重要。
+https://x.com/iwashi86/status/1852527436958962060
