--- a/shared/technology/engineering/技術者.md
+++ b/shared/technology/engineering/技術者.md
@@ -18,3 +18,8 @@
 ソフトウェアエンジニアとか、QAエンジニアとか。
 
 エンジニアが問題に対して「めんどい」と答えるなら、解決策自体は思いついている。
+
+技術者が「土日も勉強して当然」というのは奴隷が鎖自慢するようなものだけど、「土日は仕事のしがらみがなくて技術で遊ぶのが楽しい」と考えている人と比べられる覚悟は必要。
+
+「みんなが根性出さなくてもいいような仕組みを作るのがエンジニアなので、エンジニアは根性いる。」
+https://x.com/eeveekawaiiiiii/status/1836544364136534371
