--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパー.md
@@ -1,3 +1,8 @@
 J.HKやバーニングキックでもめくれるのが強み。
 
 セイスモハンマーをキャンセルしてセイスモハンマーに行ける。
+
+AC3から中サンダー派生でステップして中足が持続当て。
+ただ、中足持続は1有利から立ちコパンしか届かない。
+
+ヴァイパーはとりあえずAC3が強い。2HPセイスモが下段で、しかもヒット確認してくれる。ガードされた場合は何もしないか、ジャンキャンからバーニングやサンダーを狙える。
