--- a/shared/society/社交におけるコミュニケーション.md
+++ b/shared/society/社交におけるコミュニケーション.md
@@ -26,3 +26,9 @@
 自分の何を知ってもらうべきか。
 これは同じものだと思う。
 基本的には、どれだけ信頼できるか、を見極めるためにある。
+
+社交において、何を知って、何を知らせるべきか、というのは、どういう人間であるべきか、というのと同じなのかも。
+まず、害がないこと。それから、長く一緒にいたいと思えること。あるいは、利益があること。
+
+社交におけるコミュニケーションは、社交でやりとりするべき情報とも言える。
+信頼関係を考えた時、何を情報としてやり取りするべきか。あるいは何を意識するべきか。
