--- a/shared/society/社交性.md
+++ b/shared/society/社交性.md
@@ -48,3 +48,5 @@ https://ja.wikipedia.org/wiki/%E7%A4%BE%E4%BC%9A%E6%8A%80%E8%83%BD
 でも人間はそうではない。人間には蟻以下の社会性しかない。
 
 「なぜ政治が良くならないのか」というのは、人間に社会性がないせい。特に1億人とかの規模になると厳しい。そもそも同じ家族の中ですら人間同士で協力して平和に生きられない。
+
+リアクションが小さいのが社交的にはよくないというか、向いてないと思ってる。
