--- a/shared/care/responsibility/責任.md
+++ b/shared/care/responsibility/責任.md
@@ -126,3 +126,5 @@ https://youtu.be/TH0ZiPNkddQ?si=ejD2IH1dFfaVBjmv
 
 報酬は責任と比例する。
 責任を負えないなら報酬も増えないし、逆に貰いすぎると責任が重すぎて身の破滅に繋がる。
+
+「自分が悪い」と考えて反省するのはいいけど、重要なのは行動に反映させることであって、いつまでも悩むのは無駄。逆に、行動を変えなくてもうまくいってるなら「自分が悪い」という認識自体が間違っている。行動を変えても変わらない場合も自分は関係ない。
