--- a/shared/trust/intimacy/友人.md
+++ b/shared/trust/intimacy/友人.md
@@ -155,3 +155,5 @@
 みんな、今の居場所から逃避するために誰かと交わるのかもしれない。逃げる必要がないなら友人なんて要らないのか？
 
 異性との友人付き合いを考えるなら、異性を意識するような会話は避ける。容姿を褒めるとか。
+
+まず会うのが先で、用事が後なのが友達？用事がなくても会いたいのが友人。主に話すのが目的。あるいは会うのが目的というべきか。
