--- a/shared/computer/programming/ソフトウェア設計.md
+++ b/shared/computer/programming/ソフトウェア設計.md
@@ -51,3 +51,5 @@ https://qiita.com/getty104/items/c06773198c0244e7744d
 
 設計の内容
 https://qiita.com/Saku731/items/741fcf0f40dd989ee4f8
+
+ソフトウェアの設計と実装は切り離せない。コードは設計書だ。
