--- a/shared/world/混沌.md
+++ b/shared/world/混沌.md
@@ -8,3 +8,5 @@
 この世界の基礎は混沌。それを間違えるとうまく対応できない。秩序はあくまでも混沌に対応するものでなければならない。
 
 美しさを生み出すためには、混沌をベースにしながら、混沌をコントロールする必要がある。
+
+本当は秩序があったとしても、理解できなければ混沌と同じ。
