--- a/shared/gift/贈与.md
+++ b/shared/gift/贈与.md
@@ -21,3 +21,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 自分が贈ったものを相手に持っていてほしいという感覚はわからないが、存在するらしい。
 
 愛のために手間や時間をかけるのも贈与になる。
+
+欲がない人は贈り物を選ぶのが難しい。
