--- a/shared/collaboration/organization/多様性.md
+++ b/shared/collaboration/organization/多様性.md
@@ -9,3 +9,9 @@
 多様性を維持するにはコストがかかる。
 
 多様性と複雑さは表裏一体だ。
+
+必要なのは多様性ではなく、変化に対する頑強性、堅牢性。基本的には均一な集団よりも多様な集団の方が変化に強いけど、弱くなる場合もある。
+
+一時的な多様性の中で一つの種だけが進展して、逆に均一化を招いてしまうことがある。
+
+多様性の逆は均一性。
