--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -125,3 +125,5 @@
 価値観がずれているのが問題なら、まずはお互いに話し合って価値観のずれを直さないといけない。パートナーに「働いた」と認められないと意味がない。
 
 - 何が「家のためになった」「働いた」と言えるか、逆に何がそうでないか
+
+結婚しない人はそんなに稼がなくてもいいので、働かなくなる可能性も高い。
