--- a/shared/memory/記憶.md
+++ b/shared/memory/記憶.md
@@ -47,3 +47,5 @@ https://allabout.co.jp/gm/gc/493724/
 関心がないことは覚えられない。
 
 記憶力は関心がないと働かないので、覚えられないのは興味がないだけ。
+
+暗記は一つだけ覚えるんじゃなくて、導出する方法を覚えたりして周りとの関連を覚えると思い出しやすい。
