--- a/shared/singing/tips/キーを変えて歌う.md
+++ b/shared/singing/tips/キーを変えて歌う.md
@@ -78,3 +78,7 @@ https://note.com/atano/n/n3c01c44d8bae
 まず原キーで歌えるようになってからキーを変えるのが基本。キーはメロディというよりテクスチャの段階。
 
 キーは音程よりもテンションに合わせる。自分のテンションが原曲のテンションと合うようにする。
+
+キー1つくらいなら調整せずに原キーの方がいい。
+
+DAMの「おすすめキー」みたいな機能は歌いやすいキーというだけなので、曲の雰囲気を考えると少し高めにした方がいい場合もある。
