--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -8,23 +8,32 @@
 
 ## 2HP
 
-- 2HP, 弱ハンマー, JC, 弱バーニング, 中サンダー: 2850
-- 2HP, 弱ハンマー, JC, 弱バーニング, 中サンダー-PP: 3120
-- 2HP, 弱ハンマー, JC, 弱バーニング, SA3: 5020 (AC3)
+- 2HP, 弱ハンマー, JC, 弱バニ, 中サンダー: 2850
+- 2HP, 弱ハンマー, JC, 弱バニ, 中サンダー-PP: 3120
+- 2HP, 弱ハンマー, JC, 弱バニ, SA3: 5020 (AC3)
 
 ## 弱/中ハンマー
 
-- 弱/中ハンマー, JC 中バーニング, 強サンダー
-- 弱/中ハンマー, JC 中バーニング, SA3
+- 弱/中ハンマー, JC 中バニ, 強サンダー
+- 弱/中ハンマー, JC 中バニ, SA3
 
 ## その他
 
 - HK, JC サンダー
 - HK, JC ハンマー
-- HK, JC バーニング
+- HK, JC バニ
+- HK, JC ODバニ
 
 HKで拾うコンボが結構あるのでMきついかも。
 
 - 2HP, 強サンダーフェイント, 2MP
 
 - 2MP, ODハンマー
+
+- 2MP, 強サンダーフェイント: +5/-2
+- HP, JC 強サンダーフェイント: +6/-1
+- HK, JC 強サンダーフェイント: +7/0
+
+- DR 6HK, MP, 2MP
+
+- DR 6MP, 2MP
