--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -75,3 +75,9 @@
 餌の前に堂々と姿を見せるのも、客に失礼な態度を取るのもどちらも間違っている。姿を大きく見せて威嚇しないといけないのは敵の前だけ。
 
 人付き合いやビジネスを試せる場が必要。捨ててもいい知人がたくさんいた方がいいかも。
+
+社会の基礎は共生。共存共栄。「共に生きる」ことが基礎。
+
+社交では、その人と一緒に生きられるかどうか、がまず重要。その上で、人数が多いと、価値を求められる。
+
+社交のベースは人の一緒にいること。
