--- a/shared/trust/intimacy/友人.md
+++ b/shared/trust/intimacy/友人.md
@@ -157,3 +157,11 @@
 異性との友人付き合いを考えるなら、異性を意識するような会話は避ける。容姿を褒めるとか。
 
 まず会うのが先で、用事が後なのが友達？用事がなくても会いたいのが友人。主に話すのが目的。あるいは会うのが目的というべきか。
+
+そもそも、一緒にいたい人がいるかどうか。もしいないなら、友人を作る前にそういう会いたい人を作る。自分がまず会いたいと思う。
+
+いてもいなくても同じくらいだと、一緒にいたいとは思わない。
+
+一緒に生きたいかどうか。
+
+友人が多くなると、その中でも選別される。
