--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -231,3 +231,7 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 
 顎の動きは、耳の前の関節を軸に回転させて下に開く方法と、顎を前に出して前に開く方法がある。
 下に開くと顎が首側に近づいてしまう動きをするので、前に開いたほうが喉を広げやすい。
+
+喉を締めずに高い「え」の練習。潰れた感じだけど、喉は楽に。
+
+頬を使って口を上に開ける練習。
