--- a/shared/war/戦闘.md
+++ b/shared/war/戦闘.md
@@ -12,3 +12,6 @@
 一対一で密着の戦闘の一つの目標はマウントポジションを取ること。相手の腹を股で挟んで馬乗りになること。一方的に全力の打撃を打てる。
 
 避けるのは受けるよりも難しい。避けきれないと思ったら初めから受けるつもりで受けたほうが被害を抑えられる。
+
+マウントポジションでは握り拳の小指側を下にしてハンマーのように撃ち下ろすのが安全。体をそれほど前に倒さなくても威力が出る。
+対して、密着最大威力は頭突きか掌底。ただ、掌底は前のめりになるし、力の方向として関節周りを怪我しやすい。
