--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -5,12 +5,19 @@
 ## 2MP
 
 - 2MP, ODサンダー
+- 2MP, ODセイスモ, JC 空バニ, 強サンダー
+- 2MP, ODセイスモ, JC 空バニ, 強サンダー-PP
 
 ## 2HP
 
 - 2HP, 弱ハンマー, JC, 弱バニ, 中サンダー: 2850
 - 2HP, 弱ハンマー, JC, 弱バニ, 中サンダー-PP: 3120
 - 2HP, 弱ハンマー, JC, 弱バニ, SA3: 5020 (AC3)
+
+## 2HP(pc)
+
+- 2HP(pc), 強サンダーC, 2HP, 強サンダーC, 2MP, 強サンダー
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC バニ
 
 ## 弱/中ハンマー
 
