--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -33,14 +33,25 @@
 
 HKで拾うコンボが結構あるのでMきついかも。
 
-- 2HP, 強サンダーフェイント, 2MP
+- 2HP, 強サンダーC, 2MP
 
 - 2MP, ODハンマー
 
-- 2MP, 強サンダーフェイント: +5/-2
-- HP, JC 強サンダーフェイント: +6/-1
-- HK, JC 強サンダーフェイント: +7/0
+- 2MP, 強サンダーC: +5/-2
+- HP, JC 強サンダーC: +6/-1
+- HK, JC 強サンダーC: +7/0
 
 - DR 6HK, MP, 2MP
 
 - DR 6MP, 2MP
+
+- 2MP, 弱サンダー
+- 2MP, 弱バニ-PP
+
+- HP(c), LK
+- 6HK(c), 2MP
+
+- 2HP, 弱セイスモ, JC 空バニ, ODバニ
+- 2HP, 弱セイスモ, JC 空バニ, SA1/2/3
+
+- ODセイスモ, HJ.MP, 強空バニ
