--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -1,33 +1,91 @@
+## 概要
+
+`2HP, 弱セイスモ, JC 強バニ`のコンボがあらゆるところで出てくる。
+中/強サンダーやSA、`ODバニ, SA2/3`が繋がるので汎用性も高い。
+モダンならAC3なので簡単。ただ、MPやHKがないので、それ以外のコンボを伸ばしにくい。
+
+- DI(pc)
+- DI(壁)
+- 2MP(pc)
+- 2MP, CR HP
+- DR 2MK
+- DR 6MP, 2MP, CR HP
+
+この辺りからは2HPに繋いでおけば安牌。
+
+## LP(c)
+
+- LP(c), 2MP, 弱サンダー
+
 ## 2LK
 
 - 2LK, 2LP 2回, LK, 中サンダー: 1280
+- 2LK, 2LP 2回, LK, 強サンダー: 1280
 
 ## 2MP
 
-- 2MP, ODサンダー
-- 2MP, ODセイスモ, JC 空バニ, 強サンダー
-- 2MP, ODセイスモ, JC 空バニ, 強サンダー-PP
+- 2MP, 弱/中/強サンダー: 1500
+- 2MP, ODサンダー: 2200
+- 2MP, ODセイスモ, JC 強バニ, ...: ダメージは2HP, 弱セイスモと同じ
+- 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+- 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
+
+## 2MP(pc)
+
+- 2MP(pc), 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+
++6の最大コンボ。
 
 ## 2HP
 
-- 2HP, 弱ハンマー, JC, 弱バニ, 中サンダー: 2850
-- 2HP, 弱ハンマー, JC, 弱バニ, 中サンダー-PP: 3120
-- 2HP, 弱ハンマー, JC, 弱バニ, SA3: 5020 (AC3)
+- 2HP, 弱セイスモ, 強サンダー: 2220
+- 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー: 2850
+- 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP: 3120
+- 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3150
+- 2HP, 弱セイスモ, JC 強バニ, SA1: 3620
+- 2HP, 弱セイスモ, JC 強バニ, SA2: 4320
+- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 4770
+- 2HP, 弱セイスモ, JC 強バニ, SA3: 5020 (AC3)
+- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5270
 
 ## 2HP(pc)
 
-- 2HP(pc), 強サンダーC, 2HP, 強サンダーC, 2MP, 強サンダー
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC バニ
+- 2HP(pc), 強サンダーC, 2HP, 強サンダーC, 2MP, 弱/中/強サンダー
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
 
-## 弱/中ハンマー
+## DR 2MK
 
-- 弱/中ハンマー, JC 中バニ, 強サンダー
-- 弱/中ハンマー, JC 中バニ, SA3
+- DR 2MK, 2HP, ...
+
+## DR 6MP
+
+- DR 6MP, 2MP, 弱/中/強/ODサンダー
+- DR 6MP, 2MP, ODバニ, SA2/3
+- DR 6MP, 2MP, CR HP, 強サンダーC, 2HP, ...
+- DR 6MP, 2MP, ODセイスモ, ...
+
+## 弱/中セイスモ
+
+- 弱/中セイスモ, JC 強バニ, 強サンダー
+- 弱/中セイスモ, JC 強バニ, SA3
+
+## DI(pc)
+
+- DI(pc), 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+
+## DI(壁)
+
+- DI(pc), 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+
+## {BO} DI(壁)
+
+- DI, ODセビ, 2HP, 弱セイスモ, JC OD空バニ, ODバニ, SA3
 
 ## その他
 
 - HK, JC サンダー
-- HK, JC ハンマー
+- HK, JC セイスモ
 - HK, JC バニ
 - HK, JC ODバニ
 
@@ -35,7 +93,7 @@ HKで拾うコンボが結構あるのでMきついかも。
 
 - 2HP, 強サンダーC, 2MP
 
-- 2MP, ODハンマー
+- 2MP, ODセイスモ
 
 - 2MP, 強サンダーC: +5/-2
 - HP, JC 強サンダーC: +6/-1
@@ -46,12 +104,12 @@ HKで拾うコンボが結構あるのでMきついかも。
 - DR 6MP, 2MP
 
 - 2MP, 弱サンダー
-- 2MP, 弱バニ-PP
+- 2MP, 弱バニPP
 
 - HP(c), LK
 - 6HK(c), 2MP
 
-- 2HP, 弱セイスモ, JC 空バニ, ODバニ
-- 2HP, 弱セイスモ, JC 空バニ, SA1/2/3
+- 2HP, 弱セイスモ, JC 強バニ, ODバニ
+- 2HP, 弱セイスモ, JC 強バニ, SA1/2/3
 
 - ODセイスモ, HJ.MP, 強空バニ
