--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -11,12 +11,15 @@
 
 ## ラッシュ中段からのコンボ
 
-- DR 6MP
+- DR 6MP, 2MP, 強サンダーPP, ...
 
 ## 頻出するコンボルート
 
 - 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP
-- 2HP, 弱セイスモ, JC 強バニ, SA
+- 2HP, 弱セイスモ, JC 強バニ, SA1/2/3
+- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
+
+モダンならAC3で簡単。
 
 ## 頻出するコンボルートの応用
 
@@ -26,4 +29,4 @@
 
 ## ラッシュ下段からのコンボ
 
-- DR 2MK, 2HP, ...
+- DR 2MK, 2HP, 弱セイスモ, ...
