--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -54,9 +54,19 @@
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
 
-## DR 2MK
+## 2MK(c)
 
-- DR 2MK, 2HP, ...
+- 2MK(c), 弱セイスモ, ...
+
+## {近} DR 2MK
+
+- DR 2MK, 2HP, 弱セイスモ, ...
+
+## {遠} DR 2MK
+
+- DR 2MK, JC 弱セイスモ, ...
+
+先端付近では2HPが届かないので、直接セイスモに繋ぐ。
 
 ## DR 6MP
 
