--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -1,53 +1,26 @@
-## 技を当ててジャンキャンバニ
+## バニKK
 
-- HP, 上JC 中バニ: 表
-- HP, 前JC 中バニ: 裏
+- 前投げ
+- バクステ, {通常投げ}, 2MP/2HP
 
-## 前投げ
+## HJ 強空バニ
 
-- {端}
-  - ステップ: 7
-    - MP
-    - 2MK
+ガードされても五分。
 
-## 弱サンダーPP
+## HJ OD空バニ
 
-- ステップ
-  - 前進
-    - 前投げ
-  - 後退: シミー
-- DR 6MP
-- DR 2MK
-- {端}
-  - LP
-    - 6MP
-    - LK
-      - 前投げ
+ガードされても+4で後退がシミーになる投げ間合い。
+しかも初期位置の距離からでもちゃんとめり込む。
 
-## 中サンダーPP
+3ゲージ使うので運用は計画的に。
 
-- ステップ
-  - 前進
-    - 投げ
-  - 2MK
-    - 2MP
-- DR 6MP
-- DR 2MK
-
-## 強サンダーPP: 25
-
-- ステップ
+- {ガード}
+  - 2MP
   - 前投げ
+  - 後退: シミー
 
-## ODサンダー: 42
+## DR 6MP
 
-- {端}
-  - J.HK: 4F詐欺
-
-## 弱/中/強バニPP: 23
-
-- 6MP(+1)
-
-## セイスモ, JC 強バニ, 中サンダーPP: 40
-
-- ステップ, 2MK(+2): ヒットしたら中央でも2MPが入る、カウンターなら2HPでもいい
+- {ガード}
+  - 2LP 2回: 繋ぎ、連続ガード
+  - LP, 2LP: モダン用、連続ガードにならない
