--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -2,6 +2,17 @@
 
 - 強サンダーPP
 
+## 弱サンダーで締めるコンボ
+
+- DR 6MP/6HK, 2MP, 弱サンダーPP
+  - ステップ
+    - 前進, 前投げ
+
+## 強サンダーで締めるコンボ
+
+- 2MP, LK, 強サンダーPP
+- 2MK, LK, 強サンダーPP
+
 ## 密着の攻め
 
 - 2MP/2MK
@@ -15,7 +26,11 @@
 
 ## 頻出するコンボルート
 
-- 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP
+- 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP
+  - ステップ
+    - 2MK
+    - 前進, 前投げ
+    - 後退
 - 2HP, 弱セイスモ, JC 強バニ, SA1/2/3
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
 
