--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -1,3 +1,13 @@
+## DR 2MK
+
+- JC 中空バニ: ガードされても五分、距離によっては裏に回る
+
+## DR 6MP
+
+- {ガード}
+  - 2LP 2回: 繋ぎ、連続ガード
+  - LP, 2LP: モダン用、連続ガードにならない
+
 ## バニKK
 
 - 前投げ
@@ -19,8 +29,13 @@
   - 前投げ
   - 後退: シミー
 
-## DR 6MP
+## セイスモ
 
-- {ガード}
-  - 2LP 2回: 繋ぎ、連続ガード
-  - LP, 2LP: モダン用、連続ガードにならない
+発生が遅いし、持続も長い。
+フェイントを混ぜながらでないと見てからラッシュやジャンプで抜けられる。なんならまずフェイント中心。
+
+- セイスモ-フェイント
+- セイスモ
+  - JC 中空バニ: ガードされても五分
+  - JC セイスモ, JC セイスモ, ...: 削り
+  - {ガード}
