--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -1,3 +1,11 @@
+- 一部の技をハイジャンプでキャンセルできる
+- バーニングキックでジャンプの軌道を変えられる
+- インパクトが長い
+- 打撃当て身がある
+- SA以外の完全無敵技がない
+- 対空無敵技の発生が少し遅い (7F)
+- 中足を必殺技キャンセルできない
+
 J.HKやバーニングキックでもめくれるのが強み。
 
 セイスモハンマーをキャンセルしてセイスモハンマーに行ける。
