--- a/shared/sports/baseball/野球の定石.md
+++ b/shared/sports/baseball/野球の定石.md
@@ -38,6 +38,8 @@
 
 走者一塁以外は長打一本で帰ってこれるので、わざわざ送らなくていい。
 
+送りバントやスクイズは1点負けを同点に、あるいは最終回で同点を1点勝ちにするための戦略。特に下位打線で1点取れるといい。点差があったら打った方がいい。
+
 ## 守りのセオリー
 
 - ホームアウトを狙うなら内野は前に出る
