--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -93,3 +93,5 @@ gameはworkと違って、何も変えないこともある。
 友人や恋人を相手に駆け引きを楽しむのは印象が良くない。
 
 「絶対に勝てるゲームなんてつまらないだろ。そんなのゲームじゃない。」『うみねこのなく頃に』
+
+タイマンじゃない対戦ゲームだとヘイト管理が大事。1人で2人以上から集中して狙われるときつい。
