--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -141,3 +141,17 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 物語ではキャラの特徴を誇張してみる。
 
 喜劇を描くのは悲劇を描くよりも難しい。
+
+物語の雰囲気:
+
+- シリアス
+- 滑稽話（ギャグ）: 笑わせる
+- 人情噺: 泣かせる
+- 怪談話: 怖がらせる
+
+雰囲気としてはシリアスなんだけど、内容としてはギャグということもある。滑稽なことを真剣にやってる。
+
+物語の展開:
+
+- 喜劇（コメディ）: ハッピーエンド
+- 悲劇（レメディ）: バッドエンド
