--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -61,8 +61,8 @@
 
 リセマラのポイントは、
 
-1. まず内気の枚数。1枚は欲しい。
-2. 次に投手の強さ。できれば転生や天才。
+1. 投手の星300転生。
+2. 次に内気の枚数。1枚は欲しい。
 3. 野手は一人強くてもチームが勝てない。最後。ただ、捕手のキャBは強い。
 
 序盤は投手が弱いと厳しい。
@@ -70,6 +70,9 @@
 まず全員の星を確認して、星200超える選手がいなかったらリセットする。ただ、全員星100なら上級生次第でチーム力で行けるかも。まぁ、全員星100の方がレア。
 
 やっぱ栄冠ナインの序盤は野手だけ強くても試合に勝てなくて育てきれない。特に天才は特殊能力も少ないから本も溜め込んでおきたいし。
+
+1年目は天才より転生。
+天才は育てきれないので、キャAとか他の選手も何人か強くないときつい。
 
 ## スカウト
 
