--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
@@ -1,4 +1,10 @@
+## 対応
+
 - セイスモにジャンプを合わせる
   - 発生24Fで見てからジャンプできる
   - フェイントには注意
 - 地上バニ派生にインパクトを合わせる
+
+## その他
+
+ヴァイパーは後退がシミーになる場面があまりない。最速暴れは択の一つ。
