--- a/shared/computer/software/development/ソフトウェア開発.md
+++ b/shared/computer/software/development/ソフトウェア開発.md
@@ -212,3 +212,6 @@ https://tech.willgate.co.jp/entry/2024/04/01/184252
 製品開発を知らないとソフトウェア開発もわからない。
 
 一般的なソフトウェア開発者はレベルが低いというか、そもそも求められる知識が広すぎる。それこそ趣味で知識を集めるような人間じゃないとついていけないくらい。
+
+ソフトウェア開発は工業よりも工芸に近い。
+工業が必要なのは量産が必要だからで、ソフトウェアに量産は必要ない。一般的な工学的管理手法はあまり良くない。
