--- a/games/Pawapro/2024/パワプロの選手育成.md
+++ b/games/Pawapro/2024/パワプロの選手育成.md
@@ -1,5 +1,9 @@
 ## 投手
 
+## 球速
+
+パワプロは現実より速球が弱い印象。
+
 ## 投手の優秀な特殊能力
 
 S:
@@ -39,3 +43,5 @@ B:
 
 盗塁D以下なら走力Bあれば十分。代わりにミートを伸ばしたい。
 ただし、外野は長く走るのでどっちみちA以上まで伸ばすといい。
+
+ミートパワー型なら走力はFでもいい。Eにしても大して変わらない。
