--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
@@ -45,7 +45,11 @@
 
 注目選手に設定すると経験値や信頼度の伸びが大きい。
 
+打順が早い方がいい。
+
 ただ、弱い投手だとピンチが多くて操作が面倒。あと攻守ともに操作してるとエラーが増える感じがある。真偽は不明。
+
+試合の注目選手はまず上級生の内気が優先。次にお調子者か、打てる選手。投手を育てたいなら投手もありだけど、頻繁に操作が回ってくるのでめんどい。
 
 ## 直前の起用設定
 
