--- a/shared/communication/media/language/言葉にする.md
+++ b/shared/communication/media/language/言葉にする.md
@@ -32,3 +32,5 @@ https://youtu.be/8FHo4BKf8hk?si=H7tmy8LWTURy3Ger
 娯楽とか感覚的なところは別に言語化しなくてもいいけど、誰かに話すときは不便。
 
 言葉を発生するのがSpeaking、誰かに聞かせるのはTalk。
+
+伝えたい言葉が見つからないならそれを言葉にする。「言葉にできない」を言葉にする。
