--- a/shared/politics/conflict/逃走.md
+++ b/shared/politics/conflict/逃走.md
@@ -11,3 +11,5 @@
 死が迫っている状況で逃げられるのに逃げないのは、生きることから逃げている。
 
 今の環境でうまくいってなかったら別の環境に移るのは一つの手。人間が最強生物なのは機動力が理由の一つ。
+
+敵と逆方向に離れるだけが「逃げる」ではない。罠にかかったならまず外さないといけないし、一旦足止めしないと逃げきれない場合もある。
