--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -358,3 +358,11 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 練習の目的は、成功すること。
 
 練習すればするほど下手に感じるなら、勉強しすぎ。座学は練習に合わせて進めないといけない。「ちょっと下手かも」と「天才かも」を繰り返すくらいがちょうどいい。
+
+さまざまなものに慣れるのが練習。
+
+- 負荷
+  - 恐怖
+  - 疲労
+  - 重量
+  - 仕事量
