--- a/shared/voice/training/tips/声を柔らかくする.md
+++ b/shared/voice/training/tips/声を柔らかくする.md
@@ -53,3 +53,7 @@ https://youtube.com/watch?v=bU1s_6IRkHg&si=PxXikenoXx3tjMBh
 ## メモ
 
 硬い声は響きの少ない声。倍音の少ない声。
+
+高いと硬くなりがち。高いところを地声で柔らかく歌いたい。
+
+地声は柔らかくないといけない。わざわざ裏声にしないと硬いようでは良い地声とは言えない。
