--- a/games/リッチ＆グッド.md
+++ b/games/リッチ＆グッド.md
@@ -16,3 +16,7 @@
 
 基本的には最後に200超えする株を序盤に独占できるかどうかが大きい。ただ、そうなると運ゲーになる。情報が大事。
 200超えるなら途中でも売りたくない。あくまでも途中の売りは200超える株の購入資金。40ドルで5株だけ買って200ドル越えたら1000になる。1株売った残りの300ドルを500ドルにできたら1300ドル。250ドルになったらすぐ売ってもいいし。
+
+リッチアンドグッドは実際の社会に近い、与え合う関係が求められるゲームだけど、最後だけは一位にならないといけないのが難しい。
+基本は全員で豊かになることを目指しつつ、いかに寄付をケチるかで勝利を狙うといいのかも。
+そう考えると序盤にできるだけ寄付して周りに差をつけておきたいが、そうすると運用資金が減ってしまう。
