--- a/shared/music/theory/rhythm/拍子の違い.md
+++ b/shared/music/theory/rhythm/拍子の違い.md
@@ -1,4 +1,6 @@
-# 楽譜における拍子の違い
+# 拍子の違い
+
+## 3/4と6/8の違い
 
 「3/4 拍子」と「6/8 拍子」の違いはアクセントの位置。
 
@@ -14,3 +16,6 @@ https://datt-music.com/ongaku-riron/3-4-6-8-hyousi-tigai-kaisetu/
 
 4拍子より上の拍子は、2,3拍子の組み合わせで捉えることが多い。
 例えば、ヨルシカ『アポリア』の7+8の変拍子は、「えがき　はじ　めた　あなた　はおお　きく」の3+2+2+3+3+2で分かれる感覚。
+
+3/4拍子のアクセントは強中中くらいで、3つともそれなりに強いアクセントが入る。
+対して、6/8拍子のアクセントは強強と2回なうえ、3拍部分は強弱弱の感覚。アクセントだけ聞くと4/4拍子に近い。
