--- a/shared/war/侵略.md
+++ b/shared/war/侵略.md
@@ -18,3 +18,5 @@
 侵略戦争がないと領土も変わらない。領土はあくまでもたまたま最後に侵略した国が持っているだけなので、その前は次に侵略する国が持っていたかもしれない。だから、侵略するということ自体はどちらに正義があるかわからない。
 
 誰のものでもない自然や土地を自分のもののように占有しようとする人を殺すのは侵略かどうか。
+
+周りから奪い続ける生き方は長続きしない。周りが枯れるともう恩恵を得られない。周りも一緒に伸びていくような生き方であれば、ずっと周りから恩恵を得られる。
