--- a/shared/communication/channels/talk/話.md
+++ b/shared/communication/channels/talk/話.md
@@ -58,3 +58,7 @@ conversation になっていく。まず talk が成立してから、conversati
 少なくとも聞かれたことに答えられればいい。話題が途切れないようにする。
 
 どんな振る舞いが話し上手か。
+トークが上手なのと、会話が上手なのは違う。
+
+talkとconversationは区別する。
+talkができなくてもconversationはできる。talkがつまらなくても楽しいconversationはできる。
