--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -70,7 +70,11 @@
 - 初めから弾道が高い選手はミートよりパワーを優先して上げたい
 - パワーヒッターはミートよりパワーを優先して上げたい
 
+栄冠ナインではミート走力型が基本だけど、守備が強いチームを相手にするためにはミートパワー型も一人か二人は欲しい。チャンスに強くて、できればパワーヒッターや流し打ち広角打法があるといい。
+
 ミートがあっても、パワーか走力がないと塁に出ない。
+
+栄冠ナインはフライ用の流し打ちとゴロ用の転がせが選べるミートと走力が高い型が強い。まずミートが高い方がいい。
 
 転がせが強いので、パワーより走力を優先したほうがいいかも。
 
