--- a/shared/collaboration/organization/組織の意思決定.md
+++ b/shared/collaboration/organization/組織の意思決定.md
@@ -4,3 +4,11 @@
 社長のように決裁権を持っている人が最初から前に出てしまうとその場で判断できてしまうので、間に人を挟んで判断を遅らせる手法もある。
 
 逆に、セールスではできるだけ強い決裁権を持っている人に初めからアクセスしないといけない。
+
+小さすぎず大きすぎない組織なら独裁は速い。しかし、ある程度大きくなるとむしろ遅くなる。伝達しきれない。
+
+3-7人のチーム規模でも独裁は遅い。わざわざ一人が決めて伝達するより、それぞれが考えて動いた方が速い。
+
+組織の意思決定においては、誰かが決めたら伝達が必要になる。
+
+それぞれが勝手に動けるのが最速ではある。最善かどうかは別。
