--- a/shared/society/社交におけるコミュニケーション.md
+++ b/shared/society/社交におけるコミュニケーション.md
@@ -2,6 +2,11 @@
 
 - 相手を知る
 - 自分を知ってもらう
+  - 相手にどうして欲しいか
+    - 嬉しいこと
+    - 困ること
+  - 相手に対してどうしたいか
+    - 一緒にしたいこと
 
 ## その他
 
@@ -32,3 +37,5 @@
 
 社交におけるコミュニケーションは、社交でやりとりするべき情報とも言える。
 信頼関係を考えた時、何を情報としてやり取りするべきか。あるいは何を意識するべきか。
+
+相手にどうしてほしいか、を知ってもらうのが大事かも。自分が相手に対してどうしたいか、も。カラオケ行こうよ、でもいいし、また誘ってね、でもいいし。
