--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -155,3 +155,5 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 
 - 喜劇（コメディ）: ハッピーエンド
 - 悲劇（レメディ）: バッドエンド
+
+物語の中で死人が多いと、単純に登場人物も多くなって誰が誰だかわかりにくくなる。
