--- a/shared/art/expression/表現.md
+++ b/shared/art/expression/表現.md
@@ -46,3 +46,7 @@ expression もその一部ではある。
 
 他人の表現をそのままなぞっても個性がない。歌なら自分が作った歌だと思って歌う。ダンスなら自分が作った振り付けだと思って踊る。
 逆に、個性を出さないバックコーラスやバックダンスでは同じ表現をなぞる。
+
+理想の表現と自分に合った表現が一致することはあまりない。
+まず、自分に合った表現は抱えていくしかない。もっともパフォーマンスが高い。
+その上で、理想にも近いちょうどいいところを目指す。
