--- a/shared/discussion/議論.md
+++ b/shared/discussion/議論.md
@@ -94,3 +94,5 @@ Assertion も参照。
 「効いてて草」
 「顔真っ赤で草」
 「言い返せなくて草」
+
+議論するときは、議論するレイヤーを揃えないといけない。家を建てる話をしていて、一方は基礎工事の話をしているのにもう一方がドアの装飾の話をしていたら議論とは言えない。
