--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -2,6 +2,8 @@
 
 チームにムード⚪︎がいない場合、ムード⚪︎を優先して取る。
 
+栄冠ナインではベンチも重要。総合戦力に差があると負けやすくなる。
+
 ## ポジションごとの育成方針
 
 才能がないところから育てるなら、まずは走力と守備力が高い選手をセカンドとショートにコンバートして、肩力が高い選手をサードとキャッチャーにコンバートして、特に能力が低い選手をファーストにコンバートして、残りは外野で走らせる。なんならファーストとサードと外野はコンバートなしで守備力半分でもしばらくなんとかなる。
@@ -13,17 +15,25 @@
 栄冠ナインだと通常の投手の目標値は球速145km/h、コントロールA、スタミナC、総変化量10くらい。
 転生などで余裕があればここからコントロールをSにして、球速や総変化量をさらに伸ばしたい。スタミナはBあれば基本的に困ることはない。
 
-中間目標:
+まずは総変化量が基本。
+内角中心、外角中心、低め中心を軸にしたいので、球速と制球も140kmとCくらいは必要。
 
-1. スタミナE
+目標:
+
+1. 総変化量5
 2. 制球E
-3. スタミナD or C（チーム次第）
-4. 総変化量7、2球種
-5. 制球D
-6. 総変化量10、3球種
-7. 球速141km/h
-8. 制球A
-9. 総変化量12
+3. 球速130km
+4. 球種2（総変化量6）
+5. 制球C
+6. 球速140km
+7. スタミナD/C（チーム次第）
+8. 総変化量10
+9. 制球A
+10. 球速145km
+11. 総変化量14
+
+制球C、総変化量6が最低ラインで、ある程度抑えられるようになってから球速を140kmにする。
+球速140km、制球C、総変化量6が最低ライン。
 
 緩い変化球か落ちる変化球があるなら、球速特化が強い。
 
@@ -50,6 +60,12 @@
 栄冠だと世界大会で勝手に上がってしまうので調整が難しい。
 
 コントロールAになると外角攻めの7が出るので強いけど、かなり時間がかかる。
+
+制球Dあるとだいぶ崩れにくくなる。
+
+対エースに引っかかるは球速148以上、コントロールC以上、総変化量8以上、を全て満たす場合。球速を上げなければ引っかかりにくい。
+
+https://note.com/blacktristars/n/ncbecd2314c33
 
 ## 野手
 
@@ -160,6 +176,8 @@
 
 肩力や捕球はまずボールに追いつけないと意味がない。走力や守備が優先。
 捕手、ファースト、サードはあまり動かないので走力や守備がなくてもいい。
+
+ミートAとBはあんま変わらない気がする。なんならCからあんま打率変わってない気もする。走力優先の方がいいか？
 
 ## 野手の特殊能力
 
