--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -17,3 +17,15 @@ AC3から中サンダー派生でステップして中足が持続当て。
 
 - https://youtube.com/watch?v=qAd1ePPnDko&si=3k5tYvAelhtP8aQm
 - https://youtube.com/watch?v=j2m8Hj3FaI0&si=w--B_BgbWYQOXerh
+
+## 技
+
+センダーフェイントは、強弱で違う。
+
+- 弱: 24F
+- 中: 20F
+- 強: 18F
+
+強はパッドだと入力が間に合わないくらい。
+
+セイスモフェイントは、27Fで統一。
