--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -4,27 +4,17 @@
 
 ## 弱サンダーで締めるコンボ
 
-- DR 6MP/6HK, 2MP, 弱サンダーPP
+- 2MP, 弱サンダーPP
   - ステップ
     - 前進, 前投げ
 
 ## 強サンダーで締めるコンボ
 
-- 2MP, LK, 強サンダーPP
-- 2MK, LK, 強サンダーPP
+- LK, 強サンダーPP
+  - ステップ
+    - 前投げ
 
-## 密着の攻め
-
-- 2MP/2MK
-  - {ヒット}, LK, 強サンダーPP
-    - ステップ, 前投げ
-  - {ガード}, ガード
-
-## ラッシュ中段からのコンボ
-
-- DR 6MP, 2MP, 強サンダーPP, ...
-
-## 頻出するコンボルート
+## セイスモコンボ
 
 - 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP
   - ステップ
@@ -37,7 +27,7 @@
 モダンならAC3で簡単。
 クラシックならセイスモが当たる瞬間に2369Kを素早く入力する。
 
-## 頻出するコンボルートの応用
+## セイスモコンボに繋ぐ
 
 - DI(pc), 2HP, 弱セイスモ, ...
 - DI(壁), 2HP, 弱セイスモ, ...
@@ -46,3 +36,10 @@
 ## ラッシュ下段からのコンボ
 
 - DR 2MK, 2HP, 弱セイスモ, ...
+
+## 密着の攻め
+
+- 2MP/2MK
+  - {ヒット}, LK, 強サンダーPP
+    - ステップ, 前投げ
+  - {ガード}, ガード
