--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -59,3 +59,11 @@
 ## セイスモ, JC 強バニ, 中サンダーPP: 40
 
 - ステップ, 2MK(+2): ヒットしたら中央でも2MPが入る、カウンターなら2HPでもいい
+
+## SA2: 19
+
+- DR HP: 相打ち狙い
+
+## SA3: 21
+
+- DI: ジャンプできない
