--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -145,6 +145,8 @@
 
 3年縛りの終わり近くは器材より強化アイテム、特に弾道バットを買うのもいい。
 
+3年縛りは2年目秋で勝って、春大会に出るのが重要。3年目の最上級生が伸びる。
+
 ## その他
 
 1年目の1年生投手は1人にして、残りは野手にコンバートするべきかも。2年目に野手4人だと1年生を4人登用しないといけないのが厳しい。どっちみちスカウトは投手優先なので、1年生投手をリリーフにした方がまだいい。
