--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -2,7 +2,13 @@
 
 チームにムード⚪︎がいない場合、ムード⚪︎を優先して取る。
 
+## 総合戦力
+
 栄冠ナインではベンチも重要。総合戦力に差があると負けやすくなる。
+控えも含めた能力ランクが総合戦力に、ひいては試合に影響する。
+
+S90になったらそれ以上は必要ない。
+また、1ヶ月でランクが上がるくらいの数値なら上げてしまうのもいい。とくにF38-F39とか。試合で上がるなら放っておいてもいい。
 
 ## ポジションごとの育成方針
 
