--- a/shared/achievement/project/プロジェクトを成功させる.md
+++ b/shared/achievement/project/プロジェクトを成功させる.md
@@ -1,3 +1,12 @@
 PM や PL の裁量が十分にないとプロジェクトは成功しない。
 中間管理職の裁量が小さいほど、意思決定に時間がかかる。
 いちいち上司と調整しないといけないことが増える。
+
+プロジェクトが失敗する要因は、
+
+ゴールに無理がある
+リーダーやメンバーの力不足
+ステークホルダーがカス
+
+のどれかで、監査ではどうにもならない。無駄な事務処理が増えるだけ。
+ただ、それも含めると一番の要因は、経営層が無能、と言うべきなのかも。
