--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -58,3 +58,6 @@
 
 高い声を出しても息が漏れない、裏返らないのがまずは基本。
 息を漏らすなら意識的に。声の高さと連動させないで切り分ける。
+
+男性の地声はオペラ歌手でもA4からC5くらいが限界で、一般人ならそのあたりから裏声で出すしかないと思った方がいい。なんならポップスのプロでも中音域から裏声の人も多い。
+ただ、練習では高音を伸ばすために地声で出す練習を続ける。
