--- a/shared/education/tips/宗教.md
+++ b/shared/education/tips/宗教.md
@@ -34,3 +34,5 @@
 三つとも世界や生命については言及してなくて、あと神もあまり考慮されない。どちらかというと人の意思を重視する。
 
 家族や組織と同じように、宗教も関係を維持するために努力を必要とする。能動的に関係を維持することそのものが重要。
+
+日本は宗教先進国すぎて、もはや宗教という形式すら残ってない。ただ慣習があるだけ。意識しなくても振る舞いの中に教えが馴染んでいる。
