--- a/shared/government/国民の弾圧.md
+++ b/shared/government/国民の弾圧.md
@@ -2,3 +2,5 @@
 
 投降した捕虜を殺してしまうと、投降せずに最後まで戦うようになる。
 そうなると、自軍の損失も大きくなる。
+
+統治者に文句を言う人たちは国のためを思っている。迫害するのではなく、彼らの主張に合った仕事を与える。例えば、難民を保護せよと言うなら、難民を保護させる。まぁ、支援するとは限らないけど。
