--- a/shared/government/難民.md
+++ b/shared/government/難民.md
@@ -9,3 +9,8 @@
 自分の国があるのに帰れないのは犯罪者だからだ。
 
 移民が「我々は脅威にならない」と言っても、口では何とでも言える。さらに何もしなかったとしても、信頼を得られなければ脅威は払拭されない。移民が信頼を得るには、国民に同化しなければならない。信頼を得るだけでは足りない。必要なのは民族的に同化することだけ。それが嫌なら自分の国に帰ればいい。帰れないのはその国でも犯罪者だからだ。
+
+難民にはまず同化政策が必要。そのままではなく、故郷や民族を捨てて国民になるなら国民にする。国民になる気がないなら牢屋に入れてすり潰す。国民になるつもりがないなら難民ではなくただの侵略者だ。
+
+日本国民になるなら何を基準にするべきか。
+まず、日本語は必須だし、宗教も捨てさせるべきではある。
