--- a/shared/success/成功.md
+++ b/shared/success/成功.md
@@ -400,3 +400,5 @@ achievementはwork+successで、何かを変えないと達成とは言わない
 失敗したらすぐ専門家に相談するのが上達の近道。
 
 learning, thinking, training, なども成功を目的としたもの。
+
+「尊敬できる人に会えることが増えたなら、正しい方向に進んでいるサイン」（出典不明）
