--- a/shared/government/administration/治安維持.md
+++ b/shared/government/administration/治安維持.md
@@ -8,3 +8,5 @@ https://x.com/ETH_GR0UP/status/1737299018668257688?s=20
 人類はひまになると革命を起こしがちなので、労働で削っておくのも治安のために必要ではある。
 
 医者と警察は暇な方が良い。
+
+治安の基礎は文化的同一性。文化が違えば摩擦が起きる。
