--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -13,6 +13,11 @@
 
 この辺りからは2HPに繋いでおけば安牌。
 
+## シミー
+
+シミーは2HPが基本。2MP(pc)だと2HPに繋ぐのがギリギリの距離。
+2HP(pc)から伸ばしてもいいし、単に2HPコンボでもいい。
+
 ## LP(c)
 
 - LP(c), 2MP, 弱サンダー
@@ -52,10 +57,17 @@
 - 2HP, 弱セイスモ, JC 強バニ, SA3: 5020 (AC3)
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5270
 
+## 2HP, 強サンダーC, 2MP
+
+- 2HP, 強サンダーC, 2MP, 弱サンダーPP: 2540
+
+弱セイスモよりもヒット確認しやすいルート。
+
 ## 2HP(pc)
 
 - 2HP(pc), 強サンダーC, 2HP, 強サンダーC, 2MP, 弱/中/強サンダー
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3740
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
 
 ## 2MK(c)
@@ -83,6 +95,15 @@
 
 - 弱/中セイスモ, JC 強バニ, 強サンダー
 - 弱/中セイスモ, JC 強バニ, SA3
+
+## セビ(最大溜め)
+
+- ODセビFC, 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 4320 (M:3920)
+- ODセビFC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 5620 (M:5220)
+- ODセビFC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 6420 (M:6020)
+
+ODセビは2000ダメージ、通常のセビは1400ダメージ。
+モダンはODセビが1600ダメージ、通常のセビが1120ダメージ。
 
 ## DI(pc)
 
