--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -33,6 +33,10 @@
 - DI(壁), 2HP, 弱セイスモ, ...
 - {Dリバ}, 2MP(pc), 2HP, 弱セイスモ, ...
 
+## 小技から
+
+- LP/2LP/2LK,
+
 ## ラッシュ下段からのコンボ
 
 - DR 2MK, 2HP, 弱セイスモ, ...
@@ -43,3 +47,34 @@
   - {ヒット}, LK, 強サンダーPP
     - ステップ, 前投げ
   - {ガード}, ガード
+
+## 端の前投げから中バニ
+
+- {端} 前投げ
+  - 中バニ
+    - {ヒット}
+      - J.HP, ...
+    - {ガード}
+      - 前投げ
+
+## 端の前投げから投げ
+
+- {端} 前投げ
+  - 前進
+    - 前投げ
+    - ガード: シミー
+  - 中バニ
+    - 前投げ
+    - 後退: シミー
+
+## 端の前投げからシミー
+
+（反撃設定 > ダウンリバーサル: 無敵技、何もしない）
+（反撃設定 > ダウンリバーサル: 通常投げ 3Fディレイ）
+
+- {端} 前投げ
+  - 前進
+    - ガード
+      - {通常投げ}, 2HP, ...
+      - {無敵技}, 2HP, ...
+      - {何もしない}, 前進, 前投げ
