--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -5,9 +5,19 @@
 
 ## 前投げ
 
+- 強セイスモ: 昇竜暴れが届かない、SAは技によって届くこともある、-5で大足の外
+  - フェイント: +1
 - {端}
+  - 前進
+    - 前投げ
+    - ガード: シミー
+  - 中バニ(+4): ガードされて+2、ヒットしたら+42
+    - {ガード}
+      - 前投げ
+      - 後退: シミー
   - ステップ: 7
     - MP
+    - 2MP(+2): カウンターで2HPが繋がる
     - 2MK
   - 中バニ, 2MP
 
@@ -32,7 +42,7 @@
     - LK
       - 前投げ
 
-## 中サンダーPP
+## 中サンダーPP: 18
 
 - ステップ
   - 前進
@@ -41,23 +51,42 @@
     - 2MP
 - DR 6MP
 - DR 2MK
+- 中サンダー(+3): ヒットで4、ガードで五分
+- JC 中空バニ: ガードで五分、その場受け身には裏
 
 ## 強サンダーPP: 25
 
-- ステップ
-  - 前投げ
+- ステップ: +4、ゼロ距離、後退しても投げられる
+
+距離によっては26になる。
+26になったらゼロ距離にはならずに、後退がシミーになる。
+
+セイスモ, 強サンダーPPは26になる。
 
 ## ODサンダー: 42
 
 - {端}
   - J.HK: 4F詐欺
 
+## 弱/中/強バニ(+4): 42
+
+- J.HP: 5F詐欺
+
 ## 弱/中/強バニPP: 23
 
 - 6MP(+1)
 
-## セイスモ, JC 強バニ, 中サンダーPP: 40
+## セイスモ, JC 強バニ: 56
 
+- 強バニ: 裏に回って+5、ゼロ距離
+
+## セイスモ, JC 強バニ, 強サンダーPP: 28
+
+中バニ(+4)が重なるフレームだけど、中央ではガードされたあと投げに行けないので微妙。
+
+## セイスモ, JC 強バニ, 中サンダーPP: 30
+
+- 強バニ(+4): ガードされて+2の密着、ヒットして+42
 - ステップ, 2MK(+2): ヒットしたら中央でも2MPが入る、カウンターなら2HPでもいい
 
 ## セビ: 24
