--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -1,3 +1,5 @@
+## 概要
+
 - 一部の技をハイジャンプでキャンセルできる
 - バーニングキックでジャンプの軌道を変えられる
 - インパクトが長い
@@ -5,6 +7,42 @@
 - SA以外の完全無敵技がない
 - 対空無敵技の発生が少し遅い (7F)
 - 中足を必殺技キャンセルできない
+
+## 技
+
+センダーフェイントは、強弱で違う。
+
+- 弱: 24F
+- 中: 20F
+- 強: 18F: HPを押してから6F以内
+
+強はパッドだと入力が間に合わないくらい。
+
+セイスモフェイントは、27Fで統一。
+
+セビは最大まで溜めるか、キャンセルするかの二択。中途半端に離すとガードされて-16だし、相手が攻撃してきたら勝手に解放されるのでこっちで制御する必要もない。
+
+モダンのフェイントは
+
+## 技の長さ
+
+- 通常投げ
+- 2LP
+- {C} LP
+- {C} MP
+- 2LK
+- 2MP
+- LK
+- {C} HK
+- 6MP
+- 2HP
+- MK
+- 2MK
+- 6HK
+- HP
+- 2HK
+
+## その他
 
 J.HKやバーニングキックでもめくれるのが強み。
 
@@ -17,15 +55,3 @@ AC3から中サンダー派生でステップして中足が持続当て。
 
 - https://youtube.com/watch?v=qAd1ePPnDko&si=3k5tYvAelhtP8aQm
 - https://youtube.com/watch?v=j2m8Hj3FaI0&si=w--B_BgbWYQOXerh
-
-## 技
-
-センダーフェイントは、強弱で違う。
-
-- 弱: 24F
-- 中: 20F
-- 強: 18F
-
-強はパッドだと入力が間に合わないくらい。
-
-セイスモフェイントは、27Fで統一。
