--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -148,3 +148,7 @@ HKで拾うコンボが結構あるのでMきついかも。
 - 2HP, 弱セイスモ, JC 強バニ, SA1/2/3
 
 - ODセイスモ, HJ.MP, 強空バニ
+
+- セイスモ, JC 強サンダーC, DR 2HP
+
+ハイジャンプキャンセルは先行入力というよりタイミングよく下を入れる。下が早いと出ない。攻撃がヒットする瞬間に下を入れてからコマンドに入る。
