--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -55,3 +55,5 @@ AC3から中サンダー派生でステップして中足が持続当て。
 
 - https://youtube.com/watch?v=qAd1ePPnDko&si=3k5tYvAelhtP8aQm
 - https://youtube.com/watch?v=j2m8Hj3FaI0&si=w--B_BgbWYQOXerh
+
+2MKの方が長いはずだけど、ミラーだとMKの方が判定強い気がする。前に出てないのかも。
